# OptimisationTests

./: .gitignore
GNA_example/: CMakeLists.txt  basic_gna_example.cpp  lma.cpp  lma_2d_new.cpp  lma_sparse.cpp  lma_sparse_2d_robust_residual.cpp
GNA_example/notes/: numerical_v_direct_pd_evaluation.txt  test_robustification_2d_residuals.txt
LMA_CUDA/: CMakeLists.txt  lma_with_cuda.cpp
LMA_CUDA/include/Eigen/: LevenbergMarquardt.h
